<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".missions.DistanceQuestionFragment"
    tools:showIn="@layout/activity_mission_display">

    <TextView
        android:id="@+id/distance_question_explanation"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mission_distance_question_explanation1"/>
    <TextView
        android:id="@+id/distance_question_distance"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/distance_question_explanation"
        android:text="@string/placeholder_location_loading"/>
    <TextView
        android:id="@+id/distance_question_question"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/distance_question_distance"
        android:text="@string/placeholder_question_loading"/>
    <EditText
        android:id="@+id/distance_question_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/distance_question_question"
        android:textSize="20sp"
        android:hint="@string/mission_distance_question_hint" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/distance_question_submit"
        android:layout_below="@id/distance_question_answer"
        android:text="@string/mission_distance_question_submit_button" />

</RelativeLayout>
